# FEM-C--

./: .gitignore  CMakeLists.txt  README.md  beam_geometry.json  geometry.json  main.cpp  partial.cpp  triangulations.py
FEM/: Core.cpp  Core.h  PlaneStress.cpp  PlaneStress.h  index.cpp
FEM/Elements/: Element.cpp  Element.h
FEM/Elements/E1D/: Element1D.h  LineScheme.h  LinealElement.h  QuadraticElement.h
FEM/Elements/E2D/: Element2D.cpp  Element2D.h  LTriangular.cpp  LTriangular.h  QTriangular.cpp  QTriangular.h  Quadrilateral.cpp  Quadrilateral.h  RectangularScheme.cpp  RectangularScheme.h  Serendipity.cpp  Serendipity.h  TriangularScheme.cpp  TriangularScheme.h
FEM/Elements/E3D/: CubeScheme.h  Element3D.h  Piramid.h  PiramidScheme.h
FEM/Geometry/: Geometry.cpp  Geometry.h
FEM/Solvers/: Solvers.h
FEM/Utils/: Utils.cpp  Utils.h
HTML/: index.html
HTML/js/: index.js
docs/: index.html  sindex.html
docs/css/: index.css
docs/js/: Elements.js  FEMViewer.js  index copy.js  index.js
docs/resources/: A.json  BS.json  CUBE.json  CUBEKM101010.json  CUBEOHM.json  Cube121212.json  Poaso.json  SPHERE.json  SPHERE_FERNANDO.json  Soil1.json  Soil2.json  TRIANG_BEAM.json  a.csv  exported.json  exported3.json  noporfavor.json  piramid.json  sphere_si2.json
